hphp/hack/test/typecheck/control_flow/for_undefined.php
<?hh

function f(): void {
  for (; false; $x = 10) {
  }
  echo $x;
}
